--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "upload_color_token_by_git",
   "version": "1.0.0",
-  "description": "Your Figma Plugin",
+  "description": "Figma export biui token Plugin",
   "main": "code.js",
   "scripts": {
     "build": "webpack",
@@ -21,5 +21,4 @@
     "fs": "^0.0.1-security",
     "timers": "^0.1.1"
   }
- 
 }
